S517-004: CSS issue on default dialog button
When doing Set_Default_Response, the corresponding button's text
was always white. Thus it was unreadable in light theme.

--- a/share/gps.css
+++ b/share/gps.css
@@ -72,6 +72,7 @@
                                    from(@active_button_bg_color_two),
                                    to(@active_button_bg_color_one));
    border-width: 1px;
+   color: @editor_fg_color;
    border-color: @popup_border_color;
 }
 
@@ -101,6 +102,7 @@
                                    0 0, 0 0.5,
                                    from(@active_button_bg_color_one),
                                    to(@active_button_bg_color_two));
+   color: @editor_fg_color;
    border-color: @popup_border_color;
 }
 
